# greetd-gtk-greeter-rs

./: Cargo.toml  README.md
src/: app_container.rs  login_manager.rs  main.rs  main_window.rs  prompt.rs
src/css/: app.css  prompt.css
