[package]
name = "greetd-gtk-greeter-rs"
version = "0.1.0"
authors = ["Adib Saad <adib.saad@gmail.com>"]
edition = "2018"

[dependencies]
greetd_ipc = { version = "0.6", features = ["sync-codec"] }
dbus = "0.9.1"
relm = "0.22.0"
gtk = { version = "0.14.0", features = ["v3_22_30"] }
gtk-sys = { version = "0.14.0", features = ["v3_22_30"] }
gtk-layer-shell-sys = "0.2.3"
